added swagger json, and added database
